--- a/config.json
+++ b/config.json
@@ -85,7 +85,7 @@
             "label":"Local Layer Widget Filter",
             "version":"0.1",
             "uri":"widgets/localLayer_filter/Widget",
-            "config":"configs/LocalLayer_filter/config_Local Layer Widget Filter.json"
+            "config":"configs/LocalLayer_filter/config_Local Layer widget filter.json"
          },
          {  
             "position":{  
